--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,11 @@
 
 body {
     background-color: var(--color-1);
+    overflow: hidden;
 }
 
 .app {
-    width: 100%;
-    height: 100vh;
+    height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -28,24 +28,25 @@ body {
 .input-container {
     width: 100%;
     display: flex;
+    align-items: center;
     justify-content: center;
-    height: auto;
-    gap: 0.5rem;
+    gap: 1.5rem;
 }
 .input-container input {
     height: 2rem;
     padding-left: 1rem;
+    width: 50%;
     font-size: 1.2rem;
-    width: 60%;
     border-radius: 0.5rem;
     border: 1px solid var(--color-2);
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
 }
 .input-container button {
     width: 8rem;
-    background-color:#ffa39c;
+    background-color:#fd9992;
     color: white;
     border-radius: 0.5rem;
+    height: 2.2rem;
     border: none;
     font-size: 1rem;
     padding: 0 1rem;
@@ -92,12 +93,14 @@ ul h1 {
     color: var(--color-2);
 }
 
-@media screen and (min-width: 500px) {
+@media screen and (max-width: 500px) {
     .todo {
-        width: 60%;
+        width: 80%;
     }
     .input-container input {
-        width: 50%;
+        width: 80%;
+    }
+    .input-container {
+        flex-direction: column;
     }
 }
-
